Correction iPhone 8 responsive

--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,13 @@ h1{
 	font-size: 1.2em;
 	margin-bottom: 5px;
 }
-h5 {
+h2 {
 	margin-top: 10px;
 	font-weight: 100;
+}
+h3{
+	font-size: 1.2em;
+	margin-bottom: 5px;
 }
 .envoi2 {
 	display: none;
@@ -295,11 +299,7 @@ em {
 no-margin-bottom {
 	margin: 0px;
 }
-.pop {
-	display: flex;
-	justify-content: space-between;
-	align-items: baseline;
-}
+
 .article-hebergement {
 	display: flex;
 	flex-flow: row wrap; 
@@ -310,10 +310,21 @@ no-margin-bottom {
 	padding:20px;
 	margin: 20px 20px 20px 0px;
 }
-.aside-hebergement {
+.hmarseille_aside {
 	
+	display: flex;
+	flex-flow: wrap;
+	margin: 0px;
+	width: 288px;
+		
 }
-.hebergement_box_aside {
+.pop {
+	display: flex;
+	justify-content: space-between;
+	align-items: baseline;
+	margin-bottom: 20px;
+}
+/* .hebergement_box_aside {
 	display:flex; 
 	flex-direction: row;
 	width: 280px;
@@ -337,14 +348,60 @@ no-margin-bottom {
 	width: 100px;
 	
 	
-	}
+	} 
 .text-box_aside {
 	background-color: white;
 	color: black;
     margin-left: 110px;
     margin-bottom: 0px;
     border-radius: 0px 20px 20px 0px;
+} */
+
+.hebergement_box_aside {
+    display: flex;
+    flex-direction: row;
+    width: 96%;
+    height: 130px;
+    border: 5px solid white;
+    background-color: white;
+    border-radius: 20px;
+    margin-right: 0px;
+    margin-bottom: 10px;
+    box-shadow: 4px 10px 20px 5px #bdbdbd;
 }
+.hebergement_box_aside a:hover {
+	box-shadow: 1px 1px 10px 3px #0065FC;
+	box-sizing: content-box;
+	border-radius: 20px;
+
+}
+.star {
+	display: flex;
+}
+.img-hebergement_aside {
+object-fit: cover;
+    position: absolute;
+    border-radius: 20px 0px 0px 20px;
+    height: 130px;
+    width: 110px;
+	
+	
+	}
+.text-box_aside {
+background-color: white;
+    color: black;
+    height: 108px;
+    margin-left: 120px;
+    margin-bottom: 0px;
+    margin-top: 17px;
+    padding-right: 46px;
+    border-radius: 0px 20px 20px 0px;
+    font-size: 0.9em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+
 
 /* Flex section activité  */
 .wrapper {
@@ -436,6 +493,7 @@ no-margin-bottom {
 	flex-wrap: nowrap;
 	margin-right: -40px;
 	background-color: #F2F2F2;
+	width: 1300px;
 }
 .links-footer {
 		width: 33%;
@@ -458,19 +516,26 @@ no-margin-bottom {
 	color: #0065FC;
 }	
 
+.li-footlinks {
+	margin-bottom: 10px;
+	
+	font-size: 1em;
+
+}
 
 
 
 
 
 
+/* -------------------------- Iphone ------------------------------ */
 
 
 @media all and (max-device-width: 480px) {
 
 body {
 	margin: 5px 0px 0px 0px;
-display: flex;
+    display: flex;
     flex-direction: column;
 }
 .banniere {
@@ -483,6 +548,16 @@ h1{
     margin-bottom: 5px;
     margin-right: 30px;
 }
+h2 {
+	margin-top: 10px;
+	font-weight: 100;
+	font-size:1.05em;
+}
+h3{
+	font-size: 1.2em;
+	margin-bottom: 5px;
+}
+
 h5 {
 	margin-top: 15px;
     font-size: 1.05em;
@@ -506,6 +581,8 @@ header {
     .nav-block {
     width: 100%;
     margin: 0px;
+    margin-bottom: 20px;
+    margin-top: 20px;
     }
  
     .nav-ul {
@@ -524,10 +601,10 @@ header {
         font-weight: 500;
     }
  
-    .type1 {
-    border-top: white;
-    border-bottom: 3px solid #0065FC;
-    padding: 17px 24px;
+    .type1 a {
+    border-top: 0px white;
+    border-bottom: 3px solid #F2F2F2;
+    padding: 15px 40px;
     /* flex: 1; */
     text-align: ;
     font-size: 1em;
@@ -537,16 +614,47 @@ header {
     /* width: 50%;*/
     }
  
-    .type2 {
-    border-bottom: 3px solid #f2f2f2;
-    padding: 15px 24px;
+    .type1 a:hover {
+	    border-top: 0px white;
+    border-bottom: 3px solid #0065FC;
+    padding: 15px 40px;
     /* flex: 1; */
     text-align: center;
     font-size: 1em;
     margin-right: 0px;
     }
  
-    .nav-register {
+    .type2 a {
+    border-top: 0px white;
+    border-bottom: 3px solid #F2F2F2;
+    padding: 15px 70px;
+    /* flex: 1; */
+    text-align: center;
+    font-size: 1em;
+    margin-right: 0px;
+    }
+ 
+    .type2 a:hover {
+	    border-top: 0px white;
+    border-bottom: 3px solid #0065FC;
+    padding: 15px 70px;
+    /* flex: 1; */
+    text-align: center;
+    font-size: 1em;
+    margin-right: 0px;
+    }
+ 
+
+    .nav-register a {
+    position: absolute;
+    top: 20px;
+    right: -77px;
+    font-size: 1em;
+    font-weight: 100;
+    padding: 20px 0;
+    color: black;
+    }
+    .nav-register a:hover {
     position: absolute;
     top: 20px;
     right: -77px;
@@ -722,8 +830,16 @@ display: flex;
 	flex-flow: wrap;
 	    flex-direction: column;
 	margin: 0px;
-		
 }
+.hmarseille_aside {
+	
+	display: flex;
+	flex-flow: wrap;
+	margin: 0px;
+	width: 340px;
+		
+}		
+
 .hmarseille-activite {
 	
 	display: flex;
@@ -1006,6 +1122,7 @@ background-color: white;
 	flex-wrap: nowrap;
 	margin-right: 0px;
 	background-color: #F2F2F2;
+	width: 105%;
 }
 .links-footer {
 		width: 100%;
@@ -1027,7 +1144,7 @@ background-color: white;
 	
 	color: #0065FC;
 }	
-.li-footlinksiphone {
+.li-footlinks {
 	margin-bottom: 10px;
 	margin-left: 40px;
 	font-size: 1em;
